* JDBC-LDAP is now JLDAP Based * Supports DSMLv2 * Better operational performance on searches * Created a browser which may be used to browse directories using SQL